Fiz uma revisão no código

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In laborum voluptates fugit laudantium, temporibus error dolor blanditiis nesciunt nobis, pariatur ex dolorum veritatis neque quo eos enim voluptatem? Amet, nobis.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+    In laborum voluptates fugit laudantium, temporibus error dolor blanditiis nesciunt nobis, 
+    pariatur ex dolorum veritatis neque quo eos enim voluptatem?</p> Amet, nobis.</p>
 </body>
 </html>
