--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,7 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-    In laborum voluptates fugit laudantium, temporibus error dolor blanditiis nesciunt nobis, 
+    </p> laborum voluptates fugit laudantium, temporibus error dolor blanditiis nesciunt nobis, 
     pariatur ex dolorum veritatis neque quo eos enim voluptatem?</p> Amet, nobis.</p>
 </body>
 </html>
